--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,6 +55,7 @@ jobs:
           zef install --/test LibraryMake
           zef install --/test App::Prove6
           zef install --deps-only .
+          zef install --deps-only .
           zef build .
       - name: Install Prerequisite Libraries (MacOS)
         if: matrix.os == 'macOS-latest'
